--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,22 +5,14 @@ node {
   stage('Git-Checkout') {
    git 'https://github.com/SaiCharanUppari/terraformrepo.git'
   }
-    
- //def project_path="capstoneproject/capstoneproject/"
- 
-// dir(project_path) {
-
 	stage('AWS - Production Server Provisioning'){
 	   sh label: 'terraform', script: '/root/bin/terraform  init'
 	   sh label: 'terraform', script: '/root/bin/terraform  apply -input=false -auto-approve'
 	   }
 	   
 	   stage('Downstream Build -- Ansible Deployment'){
-		 	build 'pipe-Ansible'
+		 	build 'CapstoneAnsible'
 		}
-  
-   
-//}	-----------dir end---------  
 
  notify('Job Completed')   
 } catch (err) {
@@ -28,12 +20,9 @@ node {
   currentBuild.result = 'FAILURE'
 }
 }
-
-
-
 def notify(status){
     emailext (
-	to: "saicharan713@gmail.com",
+	to: "natammegsachin369@gmail.com",
 	subject: "${status}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
 	 body: """<p>${status}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
 	<p>Check console output at <a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a></p>""",
