--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,7 +22,7 @@ node {
 }
 def notify(status){
     emailext (
-	to: "natammegsachin369@gmail.com",
+	to: "natammegasachin369@gmail.com",
 	subject: "${status}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
 	 body: """<p>${status}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
 	<p>Check console output at <a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a></p>""",
