--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,8 +6,8 @@ node {
    git 'https://github.com/natam369/CapstoneTerraform.git'
   }
 	stage('AWS - Production Server Provisioning'){
-	   sh label: 'terraform', script: '/root/bin/terraform  init'
-	   sh label: 'terraform', script: '/root/bin/terraform  apply -input=false -auto-approve'
+	   sh label: 'terraform', script: 'sudo /bin/terraform  init'
+	   sh label: 'terraform', script: 'sudo /bin/terraform  apply -input=false -auto-approve'
 	   }
 	   
 	   stage('Downstream Build -- Ansible Deployment'){
